concord_macros/tests/trybuild/fail/pagination/removed_stop_on_short_page_field.stderr
error: unknown pagination field `stop_on_short_page` for CursorPagination; allowed fields: cursor_key, per_page_key, cursor, per_page, send_cursor_on_first, stop_when_cursor_missing
  --> tests/trybuild/fail/pagination/removed_stop_on_short_page_field.rs:15:13
   |
15 |             stop_on_short_page = true
   |             ^^^^^^^^^^^^^^^^^^
